<?xml version="1.0"?>
<package>
  <name>ceres_bringup</name>
  <version>0.1.0</version>
  <description>The ceres_bringup package</description>

  <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>
  <maintainer email="chbroecker@uos.de">Christopher Broecker</maintainer>

  <license>BSD</license>
  <author email="gjulian@uos.de">Julian Gaal</author>
  <author email="chbroecker@uos.de">Chris Broecker</author>
  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
</package>
