<?xml version="1.0"?>
<package>
  <name>ceres_description</name>
  <version>0.1.0</version>
  <description>The ceres_description package</description>

  <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>
  <maintainer email="chbroecker@uos.de">Christopher Broecker</maintainer>

  <license>BSD</license>

  <author email="gjulian@uos.de">Julian Gaal</author>
  <author email="chbroecker@uos.de">Christopher Broecker</author>
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
</package>
